--- a/candidato_alcaldia.html
+++ b/candidato_alcaldia.html
@@ -45,23 +45,286 @@
     </section>
     <section class="py-5" id="candidatoUnit">
       <div class="container">
-        <div class="title"> 
-          <h1 class="text-center">Hugo Sánchez "El profe"</h1>
-        </div>
-        <div class="description"> 
-          <div class="img-person"> <img src="" alt=""></div>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum exercitationem, nisi provident soluta quia itaque cumque quae, perferendis quas temporibus magni vel praesentium consequuntur repudiandae deserunt eos doloribus, odio quibusdam nihil animi cupiditate distinctio at qui. Hic dolorem consequatur voluptatem nam inventore laborum ducimus, a esse dolore vero corporis mollitia cumque dicta amet iste. Nesciunt consequatur dignissimos fugit temporibus dolores. Eius ipsum asperiores quis eum, dolores, possimus mollitia accusantium eligendi sit minima, illum natus iusto odio molestiae. Quae ad quod repellat quos culpa et nisi, nobis, ipsum odit aut doloribus explicabo? Id dignissimos quisquam consectetur deleniti, totam animi blanditiis debitis.</p>
-          <ul> 
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-          </ul>
+        <div class="row"> 
+          <div class="col-md-5"> 
+            <div class="card primary-card">
+              <div class="img-voto-active"> <a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#registroAlc"> <img src="./img/vector/X.png" alt=""></a></div>
+              <div class="card-body-"><a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#registroAlc"> 
+                  <div class="card-body"> <img class="w-100" src="./img/brand/alcalde/hugosanchez.png" alt=""></div></a>
+                <div class="card-footer"> 
+                  <div class="social bg-blue py-4 row m-0">
+                    <div class="col-6 d-flex justify-content-center"><a href="https://www.facebook.com/profile.php?id=100093122113972" target="_blank"><img src="./img/vector/facebook.svg" alt=""></a></div>
+                    <div class="col-6 d-flex justify-content-center border-start"><a href="https://www.instagram.com/elprofecandidato/" target="_blank"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-7">
+            <div class="title"> 
+              <h1 class="text-center">Él es Hugo Sánchez "El profe"</h1>
+            </div>
+            <div class="description"> 
+              <div class="img-person"> <img src="" alt=""></div>
+              <p>Un hombre comprometido con el progreso y el bienestar de Itagüí, se presenta como candidato a la alcaldía de este municipio con una visión clara y una amplia trayectoria que respalda su liderazgo.</p>
+              <p>Hugo Sánchez ha dedicado gran parte de su vida a servir a la comunidad de Itagüí, trabajando incansablemente para mejorar la calidad de vida de sus habitantes. Su experiencia como líder comunitario y su profundo conocimiento de los desafíos y las necesidades locales lo han convertido en una figura respetada y confiable.</p>
+              <p>Como candidato, Hugo Sánchez se distingue por su enfoque en soluciones pragmáticas y efectivas. Sus propuestas están diseñadas para abordar los problemas reales que enfrenta Itagüí, desde la seguridad ciudadana hasta el desarrollo económico y la educación de calidad. Su compromiso con la transparencia y la participación ciudadana lo hace un defensor de una administración abierta y cercana a la gente.</p>
+              <p>Hugo Sánchez representa la renovación y la esperanza para Itagüí. Su visión se centra en construir un municipio más inclusivo, sostenible y próspero para todos. Con un equipo comprometido y un plan de acción sólido, aspira a llevar a Itagüí hacia un futuro mejor.</p>
+              <p>Su lema es claro: <strong>"Itagüí potencia de vida". </strong>Con Hugo Sánchez como candidato a la alcaldía, se abre la puerta a una nueva era de liderazgo, compromiso y resultados positivos para la comunidad de Itagüí. Su experiencia, valores y pasión por su municipio lo convierten en una opción destacada para liderar Itagüí hacia un futuro brillante y prometedor.</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
-    <div class="py-5"></div>
+    <section class="py-5 bg-yellow" id="candidatosConcejo">
+      <div class="container">
+        <div class="title"> 
+          <h2 class="text-center">Nuestros candidatos al concejo de Itagüí</h2>
+        </div>
+        <div class="img-ind"><img src="./img/brand/logos-18.png" alt=""></div>
+        <div class="row justify-content-center"> 
+          <div class="col-md-8">
+            <div class="d-grid">
+              <div class="number-item">
+                <div class="card bg-white">
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">01</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/1.png"></div>
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card bg-white">
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">02</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/2.png"></div>
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card bg-white">
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">03</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/3.png"></div>
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card disabled">
+                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">04</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card disabled">
+                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">05</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card bg-white">
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">06</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/6.png"></div>
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card bg-white">
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">07</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/7.png"></div>
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card bg-white">
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">08</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/8.png"></div>
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card disabled">
+                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">09</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="h5 text-strong text-center">N/A</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="number-item">
+                <div class="card bg-white">
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
+                  <div class="card-body-">
+                    <div class="card-body"> 
+                      <h1 class="text-italic m-0 text-center">10</h1>
+                    </div>
+                  </div>
+                  <div class="hover-info">
+                    <div class="infoCandidato p-1">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/10.png"></div>
+                      <div class="social bg-blue p2 row m-0">
+                        <div class="line-social"></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
+                        <div class="col-6 d-flex justify-content-center"><a href="#"><img src="./img/vector/instagram.svg" alt=""></a></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modalRegistro modal fade" id="registroConc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+            <div class="modal-content">
+              <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+              <div class="content">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfVLGqKGqyhoaU6vMA2VJbu0eUoRHPOjMz19iTk3VgK1Tc1LQ/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="py-4"></div>
+    <div class="modalRegistro modal fade" id="registroAlc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="content">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVvGwIUx7_6QNPOEPrAffRD1-ChuTb8zhI0i_vwSU0KQcucQ/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="modal fade" id="lugarVotacion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
