--- a/candidatos_concejo.html
+++ b/candidatos_concejo.html
@@ -81,7 +81,7 @@
             </li>
             <li class="d-flex justify-content-center align-items-center">
               <h3 class="m-0 me-2">#08. </h3>
-              <h4 class="m-0">No info</h4>
+              <h4 class="m-0">John Jairo Jimenez Holguín</h4>
             </li>
             <li class="d-flex justify-content-center align-items-center">
               <h3 class="m-0 me-2">#09. </h3>
@@ -106,7 +106,9 @@
             <div class="d-grid">
               <div class="number-item">
                 <div class="card bg-white">
-                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
                   <div class="card-body-">
                     <div class="card-body"> 
                       <h1 class="text-italic m-0 text-center">01</h1>
@@ -114,7 +116,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Claudia Giraldo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/1.png"></div>
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -126,7 +128,9 @@
               </div>
               <div class="number-item">
                 <div class="card bg-white">
-                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
                   <div class="card-body-">
                     <div class="card-body"> 
                       <h1 class="text-italic m-0 text-center">02</h1>
@@ -134,7 +138,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Wilfer Ramirez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/2.png"></div>
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -146,7 +150,9 @@
               </div>
               <div class="number-item">
                 <div class="card bg-white">
-                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
                   <div class="card-body-">
                     <div class="card-body"> 
                       <h1 class="text-italic m-0 text-center">03</h1>
@@ -154,7 +160,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Sebastian Sánchez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/3.png"></div>
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -165,7 +171,7 @@
                 </div>
               </div>
               <div class="number-item">
-                <div class="card bg-white">
+                <div class="card disabled">
                   <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
                   <div class="card-body-">
                     <div class="card-body"> 
@@ -185,7 +191,7 @@
                 </div>
               </div>
               <div class="number-item">
-                <div class="card bg-white">
+                <div class="card disabled">
                   <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
                   <div class="card-body-">
                     <div class="card-body"> 
@@ -206,7 +212,9 @@
               </div>
               <div class="number-item">
                 <div class="card bg-white">
-                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
                   <div class="card-body-">
                     <div class="card-body"> 
                       <h1 class="text-italic m-0 text-center">06</h1>
@@ -214,7 +222,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/6.png"></div>
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -226,7 +234,9 @@
               </div>
               <div class="number-item">
                 <div class="card bg-white">
-                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
                   <div class="card-body-">
                     <div class="card-body"> 
                       <h1 class="text-italic m-0 text-center">07</h1>
@@ -234,7 +244,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Francisco Ossa</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/7.png"></div>
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -246,7 +256,9 @@
               </div>
               <div class="number-item">
                 <div class="card bg-white">
-                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
                   <div class="card-body-">
                     <div class="card-body"> 
                       <h1 class="text-italic m-0 text-center">08</h1>
@@ -254,7 +266,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Jhon Jairo Holguín</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/8.png"></div>
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -265,7 +277,7 @@
                 </div>
               </div>
               <div class="number-item">
-                <div class="card bg-white">
+                <div class="card disabled">
                   <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
                   <div class="card-body-">
                     <div class="card-body"> 
@@ -286,7 +298,9 @@
               </div>
               <div class="number-item">
                 <div class="card bg-white">
-                  <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                  <div class="img-voto-active"> 
+                    <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                  </div>
                   <div class="card-body-">
                     <div class="card-body"> 
                       <h1 class="text-italic m-0 text-center">10</h1>
@@ -294,7 +308,7 @@
                   </div>
                   <div class="hover-info">
                     <div class="infoCandidato p-1">
-                      <div class="h5 text-strong text-center">Andrés Naranjo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/10.png"></div>
                       <div class="social bg-blue p2 row m-0">
                         <div class="line-social"></div>
                         <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -303,6 +317,16 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modalRegistro modal fade" id="registroConc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+            <div class="modal-content">
+              <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+              <div class="content">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfVLGqKGqyhoaU6vMA2VJbu0eUoRHPOjMz19iTk3VgK1Tc1LQ/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
               </div>
             </div>
           </div>
