--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
               <div class="row mt-mob">
                 <div class="col-md-6"> 
                   <div class="card primary-card">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
-                    <div class="card-body-">
-                      <div class="card-body"> <img class="w-100" src="./img/brand/gobernacion/estebanrestrepo.png" alt=""></div>
+                    <div class="img-voto-active"> <a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#registroGob"> <img src="./img/vector/X.png" alt=""></a></div>
+                    <div class="card-body-"><a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#registroGob"> 
+                        <div class="card-body"> <img class="w-100" src="./img/brand/gobernacion/estebanrestrepo.png" alt=""></div></a>
                       <div class="card-footer"> 
                         <div class="social bg-blue py-4 row m-0">
                           <div class="col-3 d-flex justify-content-center"><a href="https://www.facebook.com/estebanrestrepot" target="_blank"><img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -80,9 +80,9 @@
                 </div>
                 <div class="col-md-6"> 
                   <div class="card primary-card">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
-                    <div class="card-body-">
-                      <div class="card-body"> <img class="w-100" src="./img/brand/alcalde/hugosanchez.png" alt=""></div>
+                    <div class="img-voto-active"> <a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#registroAlc"> <img src="./img/vector/X.png" alt=""></a></div>
+                    <div class="card-body-"><a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#registroAlc"> 
+                        <div class="card-body"> <img class="w-100" src="./img/brand/alcalde/hugosanchez.png" alt=""></div></a>
                       <div class="card-footer"> 
                         <div class="social bg-blue py-4 row m-0">
                           <div class="col-6 d-flex justify-content-center"><a href="https://www.facebook.com/profile.php?id=100093122113972" target="_blank"><img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -91,7 +91,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="more-info d-flex justify-content-center mt-4"><a class="btn-yellow" href="candidato_gobernacion.html">Conocer más del profe</a></div>
+                  <div class="more-info d-flex justify-content-center mt-4"><a class="btn-yellow" href="candidato_alcaldia.html">Conocer más del profe</a></div>
                 </div>
               </div>
             </div>
@@ -109,7 +109,9 @@
               <div class="d-grid">
                 <div class="number-item">
                   <div class="card bg-white">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                    <div class="img-voto-active"> 
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                    </div>
                     <div class="card-body-">
                       <div class="card-body"> 
                         <h1 class="text-italic m-0 text-center">01</h1>
@@ -117,7 +119,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Claudia Giraldo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/1.png"></div>
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -129,7 +131,9 @@
                 </div>
                 <div class="number-item">
                   <div class="card bg-white">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                    <div class="img-voto-active"> 
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                    </div>
                     <div class="card-body-">
                       <div class="card-body"> 
                         <h1 class="text-italic m-0 text-center">02</h1>
@@ -137,7 +141,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Wilfer Ramirez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/2.png"></div>
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -149,7 +153,9 @@
                 </div>
                 <div class="number-item">
                   <div class="card bg-white">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                    <div class="img-voto-active"> 
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                    </div>
                     <div class="card-body-">
                       <div class="card-body"> 
                         <h1 class="text-italic m-0 text-center">03</h1>
@@ -157,7 +163,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Sebastian Sánchez</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/3.png"></div>
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -168,7 +174,7 @@
                   </div>
                 </div>
                 <div class="number-item">
-                  <div class="card bg-white">
+                  <div class="card disabled">
                     <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
                     <div class="card-body-">
                       <div class="card-body"> 
@@ -188,7 +194,7 @@
                   </div>
                 </div>
                 <div class="number-item">
-                  <div class="card bg-white">
+                  <div class="card disabled">
                     <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
                     <div class="card-body-">
                       <div class="card-body"> 
@@ -209,7 +215,9 @@
                 </div>
                 <div class="number-item">
                   <div class="card bg-white">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                    <div class="img-voto-active"> 
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                    </div>
                     <div class="card-body-">
                       <div class="card-body"> 
                         <h1 class="text-italic m-0 text-center">06</h1>
@@ -217,7 +225,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Oscar Betancur</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/6.png"></div>
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -229,7 +237,9 @@
                 </div>
                 <div class="number-item">
                   <div class="card bg-white">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                    <div class="img-voto-active"> 
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                    </div>
                     <div class="card-body-">
                       <div class="card-body"> 
                         <h1 class="text-italic m-0 text-center">07</h1>
@@ -237,7 +247,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Francisco Ossa</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/7.png"></div>
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -249,7 +259,9 @@
                 </div>
                 <div class="number-item">
                   <div class="card bg-white">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                    <div class="img-voto-active"> 
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                    </div>
                     <div class="card-body-">
                       <div class="card-body"> 
                         <h1 class="text-italic m-0 text-center">08</h1>
@@ -257,7 +269,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Jhon Jairo Holguín</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/8.png"></div>
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -268,7 +280,7 @@
                   </div>
                 </div>
                 <div class="number-item">
-                  <div class="card bg-white">
+                  <div class="card disabled">
                     <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
                     <div class="card-body-">
                       <div class="card-body"> 
@@ -289,7 +301,9 @@
                 </div>
                 <div class="number-item">
                   <div class="card bg-white">
-                    <div class="img-voto-active"> <img src="./img/vector/X.png" alt=""></div>
+                    <div class="img-voto-active"> 
+                      <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img src="./img/vector/X.png" alt=""></div>
+                    </div>
                     <div class="card-body-">
                       <div class="card-body"> 
                         <h1 class="text-italic m-0 text-center">10</h1>
@@ -297,7 +311,7 @@
                     </div>
                     <div class="hover-info">
                       <div class="infoCandidato p-1">
-                        <div class="h5 text-strong text-center">Andrés Naranjo</div><img class="avatar" src="./img/brand/default-avatar.jpg">
+                        <div class="modalActive" type="button" data-bs-toggle="modal" data-bs-target="#registroConc"> <img class="avatar" src="./img/brand/concejales/10.png"></div>
                         <div class="social bg-blue p2 row m-0">
                           <div class="line-social"></div>
                           <div class="col-6 d-flex justify-content-center"><a href="#"> <img src="./img/vector/facebook.svg" alt=""></a></div>
@@ -306,6 +320,16 @@
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modalRegistro modal fade" id="registroConc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+              <div class="modal-content">
+                <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="content">
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfVLGqKGqyhoaU6vMA2VJbu0eUoRHPOjMz19iTk3VgK1Tc1LQ/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
                 </div>
               </div>
             </div>
@@ -349,6 +373,26 @@
                 <div class="btn-action d-flex justify-content-center"><a class="btn btn-yellow mt-4" href="https://wsp.registraduria.gov.co/censo/consultar" target="_blank" type="button">Conocer mi lugar de votación</a></div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modalRegistro modal fade" id="registroGob" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="content">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdnOxUP_HjBdid0OjHf1rtpUH0wUvqz-Tc7_wcMKIA3MgDWsQ/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modalRegistro modal fade" id="registroAlc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+          <div class="content">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScVvGwIUx7_6QNPOEPrAffRD1-ChuTb8zhI0i_vwSU0KQcucQ/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
           </div>
         </div>
       </div>
