--- a/candidato_alcaldia.html
+++ b/candidato_alcaldia.html
@@ -60,7 +60,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-7">
+          <div class="col-md-7 mt-5 mt-md-0">
             <div class="title"> 
               <h1 class="text-center">Él es Hugo Sánchez "El profe"</h1>
             </div>
