--- a/candidato_gobernacion.html
+++ b/candidato_gobernacion.html
@@ -62,7 +62,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-7">
+          <div class="col-md-7 mt-5 mt-md-0">
             <div class="title"> 
               <h1 class="text-center">Él es Esteban Restrepo</h1>
             </div>
